# novel-studio

./: CLAUDE.md  README.md  TAURI_BUILD.md  package.json
backend/: .env  eslint.config.mjs  package.json  server.js
backend/db/: index.js  schema.js
backend/lib/: API_INDEX.md  api-exchange.js  api-fund.js  api-market.js  api-news.js  api-onchain.js  api-prediction-market.js  api-project.js  api-search.js  api-social.js  api-token.js  api-wallet.js  api-web.js  api.js  db.js
backend/routes/: proxy.js
frontend/: .env  eslint.config.js  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ThemeToggle.tsx
frontend/src/components/board/: BoardPage.tsx  ForeshadowTracker.tsx  NarrativeThreadForm.tsx  PlotPointCard.tsx  PlotPointForm.tsx  (+2 more)
frontend/src/lib/: API_INDEX.md  agent-prompt-builder.ts  agent-result-parser.ts  api-exchange.ts  api-fund.ts  api-market.ts  api-news.ts  api-onchain.ts  api-prediction-market.ts  api-project.ts  api-search.ts  api-social.ts  api-token.ts  api-wallet.ts  api-web.ts  api.ts  consistency-engine.ts  consistency-resolvers.ts  consistency-rules-board.ts  consistency-rules-character.ts  consistency-rules-manuscript.ts  consistency-rules-relation.ts  consistency-scanner.ts  consistency-seed.ts  consistency-store.ts  consistency-types.ts  novel-store.ts  novel-types.ts  seed-data.ts  text-extractor.ts  types-common.ts  types-exchange.ts  types-market.ts  types-onchain.ts  types-prediction-market.ts  types-search.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+18 files in other folders)
